--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1030,6 +1030,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
+.bg-amber-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 243 199 / var(--tw-bg-opacity));
+}
 .bg-cover {
   background-size: cover;
 }
