--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1020,6 +1020,14 @@ select {
   -o-object-position: top;
      object-position: top;
 }
+.object-center {
+  -o-object-position: center;
+     object-position: center;
+}
+.object-left {
+  -o-object-position: left;
+     object-position: left;
+}
 .p-6 {
   padding: 1.5rem;
 }
@@ -1148,6 +1156,14 @@ select {
 }
 .text-5xl {
   font-size: 3rem;
+  line-height: 1;
+}
+.text-8xl {
+  font-size: 6rem;
+  line-height: 1;
+}
+.text-7xl {
+  font-size: 4.5rem;
   line-height: 1;
 }
 .font-medium {
