updated background in contact, welcome, and index

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1135,6 +1135,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
+.bg-amber-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 251 235 / var(--tw-bg-opacity));
+}
 .bg-cover {
   background-size: cover;
 }
